Replaced "Ftotal" and "Fnet" with "Fsum"
Made it so all the tabs start motionless, instead of with the object sliding
Made it so the stick figure starts next to the object on startup.
Removed extraneous step button from the right hand side control panel
# 1.03.26 (33807) Jul 31, 2009
# 1.03.25 (33806) Jul 31, 2009
# 1.03.24 (33804) Jul 31, 2009
Fixed: Stick figure position should reset on Reset All
Fixed: Vector labels should be near the tail if they will be offscreen shown near the tip (or if the vector length is longer than some threshold)
Set colors to match old colors in the ramp, except for net force which was given in the design doc
Fixed: Reset All causes the sim to pause
# 1.03.23 (33790) Jul 30, 2009
Added a series for total force
Added support for "clear" and "reset all" in charts
Added "click/drag-to-seek" on the time control panel timeline bar
Fixed: Chart cursor shouldn't be draggable beyond data region.
Fixed: Chart cursor should only be visible during playback
Fixed: Recording progress bar should "fill up" during recording
Made "Reset All" button appear at the very bottom of the control panel.
Fixed: Object size is incorrect when changing objects and when object is motionless; need to switch between objects a few times to reproduce the problem; This also occurs on object change during record/playback
Added recording of whether walls are up or down
Added recording of the position of the stick figure
Made it so the chart cursor controls the playback time
Added recording for bead state
# 1.03.22 (33735) Jul 29, 2009
Added recording for ramp angle
Added recording for object type
Added series for friction work
Added series for thermal energy
Added series for gravitational force work
# 1.03.21 (33712) Jul 28, 2009
Added series for total, kinetic and potential energy
Added buttons to open Energy/Work graph
Removed Go and Pause buttons from Force chart control panel
Fixed: Make sure vector arrows overlap the chart and chart control panel