@@ -1,3 +1,5 @@
+Use lazy vals instead of defs where possible for vector calculations to improve performance
+Batch notifications during bead update; profiler reports a 17% performance improvement
 Replaced "Ftotal" and "Fnet" with "Fsum"
 Made it so all the tabs start motionless, instead of with the object sliding
 Made it so the stick figure starts next to the object on startup.
